# open-english-pronouncing-dictionary

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml  publish.yml  test.yml
corpus/: .gitignore  README.md  bench.py  build.py
site-gen/: Cargo.toml
site-gen/src/: analysis.rs  chart_layout.rs  distance_matrix.rs  main.rs  minimal_pairs.rs  phoneme_meta.rs  sagittal.rs  spelling_align.rs  util.rs
site-gen/src/render/: behavior.js  chart.rs  css.css  css.rs  distance_viz.rs  footer.rs  hero.rs  minimal_pairs.rs  mod.rs  phonemes.rs  reverse_search.rs  scripts.rs  search.rs  showcase.rs  sources.rs  stats_band.rs  workspace.rs
site-gen/tests/: html_invariants.rs  package.json  playwright-smoke.mjs
src/: lib.rs
