[package]
name = "site-gen"
version = "0.1.0"
edition = "2021"
license = "CC-BY-SA-4.0"
description = "Renders the OpenEPD GitHub Pages site from data/openepd.json"
publish = false   # internal build tool; never goes to crates.io

[[bin]]
name = "site-gen"
path = "src/main.rs"

[dependencies]
serde_json = "1"
